syntax = "proto3";
package pb;
option go_package = "github.com/danielvladco/go-proto-gql/example;pb";

import "pb/graphql.proto";

service Service {
    rpc Mutate1 (Data) returns (Data); // must be a mutation
    rpc Mutate2 (Data) returns (Data); // must be a mutation
    rpc Query1 (Data) returns (Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
    } // must be a query

    rpc Publish (stream Data) returns (Data); // must be a mutation
    rpc Subscribe (Data) returns (stream Data); // must be a subscription
    rpc PubSub1 (stream Data) returns (stream Data); // must be a mutation and a subscription

    rpc InvalidSubscribe1 (stream Data) returns (Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
    }; // must ignore
    rpc InvalidSubscribe2 (Data) returns (stream Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: MUTATION};
    }; // must ignore
    rpc InvalidSubscribe3 (stream Data) returns (stream Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
    }; // must ignore
    rpc PubSub2 (stream Data) returns (stream Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: DEFAULT};
    }; // must ignore

    rpc Ignore (Data) returns (Data) {
        option (danielvladco.protobuf.graphql.rpc) = {ignore: true};
    }; // must ignore

    rpc Name (Data) returns (Data) {
        option (danielvladco.protobuf.graphql.rpc) = {name: "newName"};
    }; // method name should be "newName"
}

service Test {
    rpc Name (Data) returns (Data); // expect service name to be "name"
    rpc NewName (Data) returns (Data); // expect service name to be "newName1" since it collides with a name from a different service

    option (danielvladco.protobuf.graphql.svc) = {name: ""};
}

service Query {
    option (danielvladco.protobuf.graphql.svc) = {type: QUERY};
    rpc Query1 (Data) returns (Data); // must be a query
    rpc Query2 (Data) returns (Data); // must be a query
    rpc Mutate1 (Data) returns (Data) {
        option (danielvladco.protobuf.graphql.rpc) = {type: MUTATION};
    } // must be a mutation
    rpc Subscribe (Data) returns (stream Data); // must be a subscription
}

message Data {
    string string_x = 1 [(danielvladco.protobuf.graphql.field) = {required: true}]; // must be required
    Foo2 foo = 2 [(danielvladco.protobuf.graphql.field) = {required: true}]; // must be required
    repeated double double = 3 [(danielvladco.protobuf.graphql.field) = {required: true}]; // must be required because its greater than 0
    string string2 = 4; // simple
    Foo2 foo2 = 5; // simple
    repeated double double2 = 6; // simple
    string bar = 7 [(danielvladco.protobuf.graphql.field) = {name: "bars"}];
    string string = 8 [(danielvladco.protobuf.graphql.field) = {name: "str"}];
    string ignore = 9 [(danielvladco.protobuf.graphql.field) = {ignore: true}];
    oneof Oneof {
        string param1 = 10;
        string param2 = 11;
        option (danielvladco.protobuf.graphql.oneof) = {name: "Oneof3"};
    }
    oneof Oneof2 {
        string param3 = 13;
        option (danielvladco.protobuf.graphql.oneof) = {ignore: true};
    }
}

message Foo2 {
    string param1 = 1;
}
